GUI Fix: - Tabbed display of subscription fields - Layout & overflow fixes

--- a/PART/Source/CprBroker/Web/Pages/CSS/style.css
+++ b/PART/Source/CprBroker/Web/Pages/CSS/style.css
@@ -9,7 +9,7 @@ body {
 
 a:link {
     font-family: "Arial", "Helvetica", "sans-serif";
-    color: #FFFFFF;
+    /*color: #FFFFFF;*/
     text-decoration: none;
 }
 
